--- a/tongquan/tong-quan.css
+++ b/tongquan/tong-quan.css
@@ -440,7 +440,7 @@ table.don-hang thead th.he{
 table.don-hang thead th.ho{
     text-align: right;
 }
-table.don-hang tbody td.fuck, tfoot td.fuck{
+table.don-hang tbody td.09, tfoot td.09{
     text-align: right;
 }
 table.don-hang tbody td.zero, tfoot td.zero{
