--- a/login/login.css
+++ b/login/login.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
 * {
     margin: 0;
     padding: 0;
@@ -53,7 +52,7 @@ html, body {
     z-index: 1;
     color: #fff;
     font-size: 18px;
-    font-weight: 600;
+    /* font-weight: 600; */
     text-align: center;
     line-height: 48px;
     cursor: pointer;
@@ -151,7 +150,7 @@ form .btn .btn-layer{
     left: -100%;
     background: -webkit-linear-gradient(right, #eb3349, #f45c43, #eb3349, #f45c43);
     border-radius: 5px;
-    transition: all 0.4s ease;;
+    transition: all 0.4s ease;
 }
 form .btn:hover .btn-layer{
     left: 0;
