--- a/themmoi/them-san-pham.css
+++ b/themmoi/them-san-pham.css
@@ -190,11 +190,11 @@ nav {
 }
 
 /* content */
-#content {
+.content {
     width: 93%;
     height: 1100px;
     margin: 0 auto;
-    background: #eee;
+    background: .eee;
 }
 .page-header {
     border: 2px solid #eee; 
@@ -253,28 +253,28 @@ form:first-of-type{
 span.text-danger {
     color: red;
 }
-.table-input #txtt{
+.table-input .txtt{
     width: 520px;
     height: 30px;
 }
-.table-input #danhmuc{
+.table-input .danhmuc{
     width: 470px;
     height:35px;
 }
-.table-input #loai{
+.table-input .loai{
     width: 200px;
     height: 30px;
 }
-.table-input #colspaninline{
+.table-input .colspaninline{
     display: inline-block;
     width: 150px;
     height: 30px;
 }
-.table-input #loai1{
+.table-input .loai1{
     width: 205px;
     height: 35px;
 }
-.table-input #nbdvt{
+.table-input .nbdvt{
     width: 152px;
     height: 30px;
 }
@@ -296,27 +296,27 @@ table{
 .bao-hanh-ton-dau h4{
     font-size: 20px;
 }
-.bao-hanh-ton-dau #txtt{
+.bao-hanh-ton-dau .txtt{
     width: 455px;
     height: 30px;
 }
-.bao-hanh-ton-dau #txtxx{
+.bao-hanh-ton-dau .txtxx{
     width: 460px;
     height: 35px;
 }
-.bao-hanh-ton-dau #txttd{
+.bao-hanh-ton-dau .txttd{
     width: 490px;
     height: 35px;
 }
-.bao-hanh-ton-dau #txttd1{
+.bao-hanh-ton-dau .txttd1{
     width: 487px;
     height: 30px;
 }
-.bao-hanh-ton-dau #noidung{
+.bao-hanh-ton-dau .noidung{
     width: 580px;
     margin-left: 20px;
 }
-#nd-baohanh{
+.nd-baohanh{
     padding-top: 20px;
 }
 select, input, textarea{
@@ -326,7 +326,7 @@ select, input, textarea{
 .ti-settings, .ti-package {
     margin-right: 10px;
 }
-.button #luu{
+.button .luu{
     background-color: rgb(14, 169, 14);
     padding: 12px 20px;
     margin: 0;
