--- a/thongtin/thong-tin.css
+++ b/thongtin/thong-tin.css
@@ -126,12 +126,20 @@ nav li:hover a {
 }
 table {
     border-collapse: separate;
-    border-spacing: 130px 10px;
     overflow: auto;
     margin-top: 20px;
 }
-table.thongtin {
-    border-spacing: 240px 20px;
+table.thongtin{
+    margin: 20px auto;
+}
+table.thongtin td{
+    padding: 25px 130px;
+}
+table.thongtin td:nth-child(2n+1){
+    padding-right: 50px;
+}
+table.suathongtin{
+    border-spacing: 130px 10px;
 }
 table.doimatkhau {
     margin-left: 250px;
@@ -166,10 +174,10 @@ div.submit .save {
     display:inline-block;
     text-align: center;
     color: white;
-    text-decoration: none;
     background-color: #28a745;
     border-radius: 5px;
     padding: 10px 15px;
+    cursor: pointer;
 }
 
 /* footer */
